Fix styles to remove the horizontal scroll bar

--- a/src/components/pages/atoms/TitleAtom/TitleAtom.module.css
+++ b/src/components/pages/atoms/TitleAtom/TitleAtom.module.css
@@ -1,3 +1,3 @@
 .TitleAtom {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
