--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0 auto;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #836131;
@@ -14,7 +14,7 @@ body {
 }
 
 code {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 ul {
